--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
         <div class="left">
 
             <div class="logo">
-                <img src="/100k-ai-faces-6 1.png" alt="img">
+                <img src="100k-ai-faces-6 1.png" alt="img">
                 <span>JOHN STARK</span>
             </div>
             <div class="unordered">
